# recipebox-v1-Ariesgal2017

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_author_favorites.py  0002_auto_20210204_0803.py
recipeBox/: asgi.py  settings.py  urls.py  wsgi.py
templates/: add_author.html  add_recipe.html  author_detail.html  author_form.html  error.html  generic_form.html  index.html  recipe_detail.html  recipe_form.html  recipe_submit.html
