[tool.poetry]
name = "recipebox-v1-ariesgal2017"
version = "0.1.0"
description = ""
authors = ["Jennifer Schneider <Ariesgal2017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
